# ApplySlave

./: .gitignore  .kiro.code-workspace  README.md  applyslave-backend.spec  hamster-backend.spec  pyproject.toml  requirements.txt
apps/applyslave-desktop/: package.json  pnpm-lock.yaml
apps/hamster-desktop/: package.json
config/: profile.yaml  secrets.yaml  settings.yaml
data/: .gitkeep  session.json
docs/: architecture-design.md  competitive-analysis.md  development-timeline.md  implementation-plan.md
docs-v2/: README.md  api-contract.md  architecture.md  competitive-analysis.md  implementation-plan.md  packaging-strategy.md
scripts/: backend_entry.py  bench_llm_extraction.py  bench_llm_reuse.py  debug_easy_apply.py  debug_llm_failure.py  debug_scroll.py  diag_fill_plan.py  diag_harvest_race.py  diagnose_greenhouse.py  download_model.py  dryrun_greenhouse.py  expand_companies.py  generate_test_resume.py  probe_combobox_fill.py  probe_generic_forms.py  probe_greenhouse_dom.py  setup.ps1  setup.sh  smoke_greenhouse.py  smoke_llm_extraction.py
services/backend/: pyproject.toml
services/backend/src/applyslave/backend/: __init__.py  applicator_worker.py  dependencies.py  main.py
services/backend/src/applyslave/backend/routers/: applications.py  discovery.py  profile.py  system.py
services/backend/src/hamster/backend/: applicator_worker.py  dependencies.py  main.py  websocket_hub.py
services/backend/src/hamster/backend/routers/: applications.py  discovery.py  profile.py  system.py
services/backend/tests/: conftest.py  test_applications_endpoint.py  test_discovery_endpoint.py  test_health.py  test_profile_endpoint.py
src/: __init__.py  main.py
src/ai/: __init__.py  form_filler.py  llm_client.py
src/browser/: __init__.py  action_executor.py  browser_manager.py  dom_extractor.py  human_like.py
src/linkedin/: __init__.py  easy_apply.py  navigator.py
tests/: test_extractor.py  test_linkedin_nav.py
(+29 files in other folders)
