[project]
name = "apply-slave"
version = "0.1.0"
description = "Filling out the same form 200 times is not a job. It's a bug in the hiring process."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "ollama>=0.4",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.9",
]

[project.scripts]
apply-slave = "src.main:app"
