[project]
name = "hamster-backend"
version = "0.1.0"
description = "FastAPI HTTP service exposing Hamster functionality to the desktop frontend"
requires-python = ">=3.12"
dependencies = [
    "hamster-shared",
    "hamster-profile-store",
    "hamster-job-discovery",
    "hamster-applicator",
    "hamster-orchestrator",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "python-multipart>=0.0.9",
]

[project.scripts]
hamster-backend = "hamster.backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hamster/backend"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
